@@ -1,3 +1,8 @@
+2012-01-04  WOnder93  <omosnacek@gmail.com>
+
+	* Bang#.userprefs:
+	  
+
 2012-01-03  WOnder93  <omosnacek@gmail.com>
 
 	* Bang#.sln:
